--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# content
+videoes/*
+!videoes/.gitkeep
+
 # dependencies
 /node_modules
 yarn.lock
