Update env var names

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-REACT_APP_CLOUD=http://localhost:8998
-REACT_APP_LOCAL=http://localhost:8999
+CLOUD=http://localhost:8998
+LOCAL=http://localhost:8999
+REACT_APP_CLOUD=ws://localhost:8998
+REACT_APP_LOCAL=ws://localhost:8999
