--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ CLOUD=http://localhost:8998
 LOCAL=http://localhost:8999
 REACT_APP_CLOUD=ws://localhost:8998
 REACT_APP_LOCAL=ws://localhost:8999
+REACT_APP_IS_LOCAL=false
